--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -5,6 +5,9 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Source\Math">
+      <UniqueIdentifier>{9cf4f36b-9ae7-4a5b-b9ea-1d0f1e832833}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Random.h">
@@ -16,26 +19,35 @@
     <ClInclude Include="Memory.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Time.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="Vector2.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="Core.h">
-      <Filter>Source</Filter>
-    </ClInclude>
-    <ClInclude Include="Transform.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="MathUtils.h">
       <Filter>Source</Filter>
     </ClInclude>
-    <ClInclude Include="Color.h">
-      <Filter>Source</Filter>
-    </ClInclude>
     <ClInclude Include="Logger.h">
       <Filter>Source</Filter>
+    </ClInclude>
+    <ClInclude Include="Color.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector2.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Vector3.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Matrix22.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Matrix33.h">
+      <Filter>Source\Math</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
