--- a/Source/Engine/Framework/Framework.vcxproj
+++ b/Source/Engine/Framework/Framework.vcxproj
@@ -136,13 +136,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="Compunts\Component.h" />
+    <ClInclude Include="Compunts\PhysicComponent.h" />
+    <ClInclude Include="Compunts\RenderCompunts.h" />
+    <ClInclude Include="Compunts\SpriteComponet.h" />
     <ClInclude Include="Emitter.h" />
+    <ClInclude Include="FrameWork.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Resources.h" />
     <ClInclude Include="Scene.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="Compunts\EnginePhyiscComponent.cpp" />
+    <ClCompile Include="Compunts\EnginePhyiscComponent.h" />
+    <ClCompile Include="Compunts\ModelRenderCompents.cpp" />
+    <ClCompile Include="Compunts\ModelRenderCompents.h" />
+    <ClCompile Include="Compunts\SpriteComponent.cpp" />
     <ClCompile Include="Emitter.cpp" />
+    <ClCompile Include="ResourceManager.h" />
+    <ClCompile Include="ResourcesManger.cpp" />
     <ClCompile Include="Scene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
