--- a/Source/Engine/Framework/Framework.vcxproj
+++ b/Source/Engine/Framework/Framework.vcxproj
@@ -136,6 +136,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="Compunts\CircleCollsionComp.h" />
+    <ClInclude Include="Compunts\CollsionComponent.h" />
     <ClInclude Include="Compunts\Component.h" />
     <ClInclude Include="Compunts\PhysicComponent.h" />
     <ClInclude Include="Compunts\RenderCompunts.h" />
@@ -145,9 +147,11 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="Resources.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Object.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="Compunts\CircleCollsionComp.cpp" />
     <ClCompile Include="Compunts\EnginePhyiscComponent.cpp" />
     <ClCompile Include="Compunts\EnginePhyiscComponent.h" />
     <ClCompile Include="Compunts\ModelRenderCompents.cpp" />
