--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -49,6 +49,7 @@
     <ClInclude Include="Math\Matrix33.h">
       <Filter>Source\Math</Filter>
     </ClInclude>
+    <ClInclude Include="Json.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileIO.cpp">
