--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -64,5 +64,11 @@
     <ClCompile Include="Logger.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="Json.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
