--- a/Source/Game/Game/Game.vcxproj.filters
+++ b/Source/Game/Game/Game.vcxproj.filters
@@ -1,40 +1,48 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source">
+    <Filter Include="Sources">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
+    <Filter Include="Sources\Resources">
+      <UniqueIdentifier>{cf370a0d-cf80-4405-9a95-66a1ac6fd36b}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="Player.cpp">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="Enemy.cpp">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="Weapon.cpp">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClCompile>
     <ClCompile Include="SpaceGame.cpp">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Player.h">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClInclude>
     <ClInclude Include="Enemy.h">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClInclude>
     <ClInclude Include="Weapon.h">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClInclude>
     <ClInclude Include="SpaceGame.h">
-      <Filter>Source</Filter>
+      <Filter>Sources</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\..\..\Build\Assets\scene.json">
+      <Filter>Sources\Resources</Filter>
+    </Text>
   </ItemGroup>
 </Project>
