--- a/Source/Engine/Core/Core.vcxproj
+++ b/Source/Engine/Core/Core.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="Math\Matrix33.h" />
     <ClInclude Include="Memory.h" />
     <ClInclude Include="Random.h" />
+    <ClInclude Include="Rect.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Vector2.h" />
