--- a/Source/Engine/Core/Core.vcxproj.filters
+++ b/Source/Engine/Core/Core.vcxproj.filters
@@ -50,6 +50,9 @@
       <Filter>Source\Math</Filter>
     </ClInclude>
     <ClInclude Include="Json.h" />
+    <ClInclude Include="Rect.h">
+      <Filter>Source\Math</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FileIO.cpp">
