--- a/Source/Engine/Framework/Framework.vcxproj
+++ b/Source/Engine/Framework/Framework.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Actor.h" />
+    <ClInclude Include="Compunts\AnimationComponent.h" />
     <ClInclude Include="Compunts\Box2DCollison.h" />
     <ClInclude Include="Compunts\Box2DPhysics.h" />
     <ClInclude Include="Compunts\CircleCollsionComp.h" />
@@ -144,6 +145,7 @@
     <ClInclude Include="Compunts\PhysicComponent.h" />
     <ClInclude Include="Compunts\RenderCompunts.h" />
     <ClInclude Include="Compunts\SpriteComponet.h" />
+    <ClInclude Include="Compunts\TitlemapComponent.h" />
     <ClInclude Include="Emitter.h" />
     <ClInclude Include="Event\Event.h" />
     <ClInclude Include="Factory.h" />
@@ -153,15 +155,18 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="Singleton.h" />
+    <ClInclude Include="TextRenderComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="AnimationComponent.cpp" />
     <ClCompile Include="Box2DPhysics.cpp" />
     <ClCompile Include="Compunts\Box2DCollison.cpp" />
     <ClCompile Include="Compunts\CircleCollsionComp.cpp" />
     <ClCompile Include="Compunts\EnginePhyiscComponent.cpp" />
     <ClCompile Include="Compunts\ModelRenderCompents.cpp" />
     <ClCompile Include="Compunts\SpriteComponent.cpp" />
+    <ClCompile Include="Compunts\TitemapComponet.cpp" />
     <ClCompile Include="Emitter.cpp" />
     <ClCompile Include="Event\Event.cpp" />
     <ClCompile Include="Event\EventManger.cpp" />
@@ -169,6 +174,7 @@
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ResourceManager.h" />
     <ClCompile Include="Scene.cpp" />
+    <ClCompile Include="TextRenderComponent.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
