--- a/Source/Game/PlatformGame/PlatformGame.vcxproj
+++ b/Source/Game/PlatformGame/PlatformGame.vcxproj
@@ -135,6 +135,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="badBaral.cpp" />
+    <ClCompile Include="Hammer.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PlatGame.cpp" />
     <ClCompile Include="PlatPlayer.cpp" />
@@ -160,11 +162,16 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Hammer.h" />
+    <ClInclude Include="badBaral.h" />
     <ClInclude Include="PlatGame.h" />
     <ClInclude Include="PlatPlayer.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\..\..\Build\Assets\Scenes\PlatScene.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\Build\Assets\Scenes\tilemap.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
